--- a/stencil-workspace/src/global/themes.scss
+++ b/stencil-workspace/src/global/themes.scss
@@ -257,9 +257,10 @@
   --modus-navbar-icon-active-bg: var(--modus-gray-1);
   --modus-navbar-icon-active-color: #0e1012;
 
-  // Profile icon
+  // Profile
   --modus-navbar-profile-icon-initials-color: var(--modus-white);
   --modus-navbar-profile-icon-active-border-color: #d6d5db;
+  --modus-navbar-profile-menu-sign-out-background-color: var(--modus-gray-light);
 
   // Pagination
   --modus-pagination-color: var(--modus-body-color);
@@ -541,9 +542,10 @@
   --modus-navbar-icon-active-bg: var(--modus-gray-6);
   --modus-navbar-icon-active-color: var(--modus-navbar-icon-color);
 
-  // Profile icon
+  // Profile
   --modus-navbar-profile-icon-initials-color: #1a2022;
   --modus-navbar-profile-icon-active-border-color: var(--modus-gray-6);
+  --modus-navbar-profile-menu-sign-out-background-color: var(--modus-dark);
 
   // Pagination
   --modus-pagination-color: var(--modus-gray-2);
